@@ -92,6 +92,9 @@ impl From<str::Utf8Error> for Rexiv2Error {
     }
 }
 
+/// A specialized Result type that specifies the Err instances will be Rexiv2Errors.
+pub type Result<T> = std::result::Result<T, Rexiv2Error>;
+
 /// An opaque structure that serves as a container for a media file's metadata.
 #[derive(Debug, PartialEq)]
 pub struct Metadata {
@@ -268,7 +271,7 @@ impl Metadata {
     /// let meta = rexiv2::Metadata::new_from_path(&path).unwrap();
     /// assert_eq!(meta.get_media_type().unwrap(), rexiv2::MediaType::Jpeg);
     /// ```
-    pub fn new_from_path<S: AsRef<ffi::OsStr>>(path: S) -> Result<Metadata, Rexiv2Error> {
+    pub fn new_from_path<S: AsRef<ffi::OsStr>>(path: S) -> Result<Metadata> {
         let mut err: *mut gexiv2::GError = ptr::null_mut();
         let c_str_path = ffi::CString::new(path.as_ref().as_bytes()).unwrap();
         unsafe {
@@ -293,7 +296,7 @@ impl Metadata {
     /// let meta = rexiv2::Metadata::new_from_buffer(&minipng).unwrap();
     /// assert_eq!(meta.get_media_type().unwrap(), rexiv2::MediaType::Png);
     /// ```
-    pub fn new_from_buffer(data: &[u8]) -> Result<Metadata, Rexiv2Error> {
+    pub fn new_from_buffer(data: &[u8]) -> Result<Metadata> {
         let mut err: *mut gexiv2::GError = ptr::null_mut();
         unsafe {
             let metadata = gexiv2::gexiv2_metadata_new();
@@ -308,7 +311,7 @@ impl Metadata {
     }
 
     /// Save metadata to the file found at the given path, which must already exist.
-    pub fn save_to_file<S: AsRef<ffi::OsStr>>(&self, path: S) -> Result<(), Rexiv2Error> {
+    pub fn save_to_file<S: AsRef<ffi::OsStr>>(&self, path: S) -> Result<()> {
         let mut err: *mut gexiv2::GError = ptr::null_mut();
         let c_str_path = ffi::CString::new(path.as_ref().as_bytes()).unwrap();
         unsafe {
@@ -340,7 +343,7 @@ impl Metadata {
     }
 
     /// Return the media type of the loaded file.
-    pub fn get_media_type(&self) -> Result<MediaType, Rexiv2Error> {
+    pub fn get_media_type(&self) -> Result<MediaType> {
         unsafe {
             let c_str_mime = gexiv2::gexiv2_metadata_get_mime_type(self.raw);
             Ok(MediaType::from(try!(ffi::CStr::from_ptr(c_str_mime).to_str())))
@@ -394,7 +397,7 @@ impl Metadata {
     }
 
     /// List all Exif tags present in the loaded metadata.
-    pub fn get_exif_tags(&self) -> Result<Vec<String>, Rexiv2Error> {
+    pub fn get_exif_tags(&self) -> Result<Vec<String>> {
         let mut tags = vec![];
         unsafe {
             let c_tags = gexiv2::gexiv2_metadata_get_exif_tags(self.raw);
@@ -426,7 +429,7 @@ impl Metadata {
     }
 
     /// List all XMP tags present in the loaded metadata.
-    pub fn get_xmp_tags(&self) -> Result<Vec<String>, Rexiv2Error> {
+    pub fn get_xmp_tags(&self) -> Result<Vec<String>> {
         let mut tags = vec![];
         unsafe {
             let c_tags = gexiv2::gexiv2_metadata_get_xmp_tags(self.raw);
@@ -458,7 +461,7 @@ impl Metadata {
     }
 
     /// List all IPTC tags present in the loaded metadata.
-    pub fn get_iptc_tags(&self) -> Result<Vec<String>, Rexiv2Error> {
+    pub fn get_iptc_tags(&self) -> Result<Vec<String>> {
         let mut tags = vec![];
         unsafe {
             let c_tags = gexiv2::gexiv2_metadata_get_iptc_tags(self.raw);
@@ -482,7 +485,7 @@ impl Metadata {
     /// Get the value of a tag as a string.
     ///
     /// Only safe if the tag is really of a string type.
-    pub fn get_tag_string(&self, tag: &str) -> Result<String, Rexiv2Error> {
+    pub fn get_tag_string(&self, tag: &str) -> Result<String> {
         let c_str_tag = ffi::CString::new(tag).unwrap();
         unsafe {
             let c_str_val = gexiv2::gexiv2_metadata_get_tag_string(self.raw, c_str_tag.as_ptr());
@@ -495,7 +498,7 @@ impl Metadata {
     /// Set the value of a tag to the given string.
     ///
     /// Only safe if the tag is really of a string type.
-    pub fn set_tag_string(&self, tag: &str, value: &str) -> Result<(), Rexiv2Error> {
+    pub fn set_tag_string(&self, tag: &str, value: &str) -> Result<()> {
         let c_str_tag = ffi::CString::new(tag).unwrap();
         let c_str_val = ffi::CString::new(value).unwrap();
         unsafe { int_bool_to_result(gexiv2::gexiv2_metadata_set_tag_string(self.raw,
@@ -506,7 +509,7 @@ impl Metadata {
     /// Get the value of a tag as a string, potentially formatted for user-visible display.
     ///
     /// Only safe if the tag is really of a string type.
-    pub fn get_tag_interpreted_string(&self, tag: &str) -> Result<String, Rexiv2Error> {
+    pub fn get_tag_interpreted_string(&self, tag: &str) -> Result<String> {
         let c_str_tag = ffi::CString::new(tag).unwrap();
         unsafe {
             let c_str_val = gexiv2::gexiv2_metadata_get_tag_interpreted_string(self.raw,
@@ -520,7 +523,7 @@ impl Metadata {
     /// Retrieve the list of string values of the given tag.
     ///
     /// Only safe if the tag is in fact of a string type.
-    pub fn get_tag_multiple_strings(&self, tag: &str) -> Result<Vec<String>, Rexiv2Error> {
+    pub fn get_tag_multiple_strings(&self, tag: &str) -> Result<Vec<String>> {
         let c_str_tag = ffi::CString::new(tag).unwrap();
         let mut vals = vec![];
         unsafe {
@@ -543,9 +546,10 @@ impl Metadata {
     }
 
     /// Store the given strings as the values of a tag.
-    pub fn set_tag_multiple_strings(&self, tag: &str, values: &[&str]) -> Result<(), Rexiv2Error> {
+    pub fn set_tag_multiple_strings(&self, tag: &str, values: &[&str]) -> Result<()> {
         let c_str_tag = ffi::CString::new(tag).unwrap();
-        let c_strs: Result<Vec<_>, _> = values.iter().map(|&s| ffi::CString::new(s)).collect();
+        let c_strs: std::result::Result<Vec<_>, _> =
+            values.iter().map(|&s| ffi::CString::new(s)).collect();
         let c_strs = c_strs.unwrap();
         let mut ptrs: Vec<_> = c_strs.iter().map(|c| c.as_ptr()).collect();
         ptrs.push(ptr::null());
@@ -565,7 +569,7 @@ impl Metadata {
     /// Set the value of a tag to the given number.
     ///
     /// Only safe if the tag is really of a numeric type.
-    pub fn set_tag_numeric(&self, tag: &str, value: i32) -> Result<(), Rexiv2Error> {
+    pub fn set_tag_numeric(&self, tag: &str, value: i32) -> Result<()> {
         let c_str_tag = ffi::CString::new(tag).unwrap();
         unsafe { int_bool_to_result(gexiv2::gexiv2_metadata_set_tag_long(self.raw,
                                                                          c_str_tag.as_ptr(),
@@ -589,7 +593,7 @@ impl Metadata {
     /// Set the value of a tag to a Rational.
     ///
     /// Only safe if the tag is in fact of a rational type.
-    pub fn set_tag_rational(&self, tag: &str, value: &rational::Ratio<i32>) -> Result<(), Rexiv2Error> {
+    pub fn set_tag_rational(&self, tag: &str, value: &rational::Ratio<i32>) -> Result<()> {
         let c_str_tag = ffi::CString::new(tag).unwrap();
         unsafe {
             int_bool_to_result(gexiv2::gexiv2_metadata_set_exif_tag_rational(self.raw,
@@ -661,7 +665,7 @@ impl Metadata {
     }
 
     /// Save the specified GPS values to the metadata.
-    pub fn set_gps_info(&self, gps: &GpsInfo) -> Result<(), Rexiv2Error> {
+    pub fn set_gps_info(&self, gps: &GpsInfo) -> Result<()> {
         unsafe { int_bool_to_result(gexiv2::gexiv2_metadata_set_gps_info(self.raw,
                                                                          gps.longitude,
                                                                          gps.latitude,
@@ -725,7 +729,7 @@ pub fn is_xmp_tag(tag: &str) -> bool {
 /// ```
 /// assert_eq!(rexiv2::get_tag_label("Iptc.Application2.Subject"), Ok("Subject".to_string()));
 /// ```
-pub fn get_tag_label(tag: &str) -> Result<String, Rexiv2Error> {
+pub fn get_tag_label(tag: &str) -> Result<String> {
     let c_str_tag = ffi::CString::new(tag).unwrap();
     unsafe {
         let c_str_label = gexiv2::gexiv2_metadata_get_tag_label(c_str_tag.as_ptr());
@@ -740,7 +744,7 @@ pub fn get_tag_label(tag: &str) -> Result<String, Rexiv2Error> {
 /// assert_eq!(rexiv2::get_tag_description("Iptc.Application2.Subject"),
 ///     Ok("The Subject Reference is a structured definition of the subject matter.".to_string()));
 /// ```
-pub fn get_tag_description(tag: &str) -> Result<String, Rexiv2Error> {
+pub fn get_tag_description(tag: &str) -> Result<String> {
     let c_str_tag = ffi::CString::new(tag).unwrap();
     unsafe {
         let c_str_desc = gexiv2::gexiv2_metadata_get_tag_description(c_str_tag.as_ptr());
@@ -755,7 +759,7 @@ pub fn get_tag_description(tag: &str) -> Result<String, Rexiv2Error> {
 /// assert_eq!(rexiv2::get_tag_type("Iptc.Application2.Subject"), Ok(rexiv2::TagType::String));
 /// assert_eq!(rexiv2::get_tag_type("Iptc.Application2.DateCreated"), Ok(rexiv2::TagType::Date));
 /// ```
-pub fn get_tag_type(tag: &str) -> Result<TagType, Rexiv2Error> {
+pub fn get_tag_type(tag: &str) -> Result<TagType> {
     let c_str_tag = ffi::CString::new(tag).unwrap();
     let tag_type = unsafe {
         let c_str_type = gexiv2::gexiv2_metadata_get_tag_type(c_str_tag.as_ptr());
@@ -804,7 +808,7 @@ pub fn get_tag_type(tag: &str) -> Result<TagType, Rexiv2Error> {
 /// assert_eq!(rexiv2::register_xmp_namespace("http://creativecommons.org/ns#/", "cc"),
 ///    Err(rexiv2::Rexiv2Error::Internal(None)));
 /// ```
-pub fn register_xmp_namespace(name: &str, prefix: &str) -> Result<(), Rexiv2Error> {
+pub fn register_xmp_namespace(name: &str, prefix: &str) -> Result<()> {
     let c_str_name = ffi::CString::new(name).unwrap();
     let c_str_prefix = ffi::CString::new(prefix).unwrap();
     unsafe {
@@ -825,7 +829,7 @@ pub fn register_xmp_namespace(name: &str, prefix: &str) -> Result<(), Rexiv2Erro
 /// assert_eq!(rexiv2::unregister_xmp_namespace("http://creativecommons.org/ns#/"),
 ///    Err(rexiv2::Rexiv2Error::Internal(None)));
 /// ```
-pub fn unregister_xmp_namespace(name: &str) -> Result<(), Rexiv2Error> {
+pub fn unregister_xmp_namespace(name: &str) -> Result<()> {
     let c_str_name = ffi::CString::new(name).unwrap();
     unsafe {
         int_bool_to_result(gexiv2::gexiv2_metadata_unregister_xmp_namespace(c_str_name.as_ptr()))
@@ -860,7 +864,7 @@ fn free_array_of_pointers(list: *mut *mut libc::c_void) {
 }
 
 /// Convert a success/failure integer representing a boolean into a Result.
-fn int_bool_to_result(success: libc::c_int) -> Result<(), Rexiv2Error> {
+fn int_bool_to_result(success: libc::c_int) -> Result<()> {
     match success {
         0 => Err(Rexiv2Error::Internal(None)),
         _ => Ok(()),
